solucionados problemas de visibilidad de la image card y mostrado correcto del precio de las entradas en el listado de sesiones.

--- a/site/public/sass/style.scss
+++ b/site/public/sass/style.scss
@@ -121,6 +121,7 @@ footer {
         padding: 10px;
         justify-content: space-evenly;
         justify-items: end;
+        gap: 50px;
 
         h2 {
             grid-area: a;
@@ -159,10 +160,10 @@ footer {
         & img {
             display: flex;
             justify-content: left;
-            max-width: 40%;
+            max-width: 35%;
             height: auto;
             object-fit: cover;
-            margin: 20px;
+            margin: 15px;
             border: 1px solid black;
             border-radius: 5px;
         }
